# ornn-due-diligence

./: .gitignore  AGENTS.md  CLAUDE.md  MULTI_PROJECT_PLAN.md  PLAN-auctionomics-onechronos.md  PLAN-competitive-landscape.md  PROJECT-HOWTO.md  README.md  SILICON_DATA_MANAGED_PROJECT_PLAN.md  TEST.md  eslint.config.mjs  investment-committee-memo.md  kokoro-audio-implementation-plan.md  management-diligence-request-list.md  management-response-evaluation-guide.md  pyproject.toml  remotion-bootstrap-plan.md  remotion-v1-build-plan.md  remotion-video-iteration-prompt.xml  second-opinion.md
_current/: harden-project-verify-with-tests-tracker.md  remove-project-smoke-tracker.md
_templates/competitive-landscape/: COMPETITIVE-LANDSCAPE-HOWTO.md  COMPETITIVE-LANDSCAPE-ITERATION-PROMPT.xml
_templates/ic-memo/: IC-MEMO-HOWTO.md  IC-MEMO-ITERATION-PROMPT.xml
projects/auctionomics/: iteration-prompt.xml  research-brief.md
projects/competitive-landscape/: iteration-prompt.xml
projects/ornn/: iteration-prompt.xml  v1-review-notes.md
projects/silicon-data/: iteration-prompt.xml  research-brief.md  v1-review-notes.md
scripts/: acceptance.mjs  generate-audio.py  lint.mjs  project-verify.mjs  project.mjs  smoke-test.mjs  test-shared.mjs
scripts/shared/: project-config.mjs  project-verify.mjs  project-workflow.mjs
tests/python/: test_generate_audio.py
video/: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json  tsconfig.test.json  v1-review-notes.md  vitest.config.ts
video/src/: Root.tsx  react-dom-server.d.ts  (+2 more)
(+117 files in other folders)
